# fresco_mb

./: CMakeLists.txt  Makefile  README.md  coverage.sh  fifoClient.c  fifoServ.c  fifoServ.h  main.c  parser.c  terminal.c  terminal.h
code/: crc16.c  crc16.h  fifoClient.c  fifoClient.h  fifoServ.c  parser.c  parser.h  terminal.c
unit-test/: CMakeLists.txt
unit-test/fresco/: CMakeLists.txt  fifo_test.cpp
unit-test/mocks/: CMakeLists.txt  Outside.cpp  Outside.h
